fix: field overlapping in address field

--- a/assets/css/frontend-forms.css
+++ b/assets/css/frontend-forms.css
@@ -542,13 +542,6 @@ body ul.wpuf-form li .wpuf-address-field:after {
   display: table;
 }
 body ul.wpuf-form li .wpuf-address-field.city_name,
-body ul.wpuf-form li .wpuf-address-field.state,
-body ul.wpuf-form li .wpuf-address-field.zip,
-body ul.wpuf-form li .wpuf-address-field.country_select {
-  float: left;
-  width: 47%;
-}
-body ul.wpuf-form li .wpuf-address-field.city_name,
 body ul.wpuf-form li .wpuf-address-field.zip {
   margin-right: 4%;
 }
